# Sistemas-Evolutivos

./: .gitignore  AG.c  AG.h  CMakeLists.txt  Planejamento.txt  Readme.md
Projeto 1/: AG.c  AG.h  Planejamento.txt  main.c
plots/: script.py
src/: AG.h  Makefile  NATUREISBEAUTIFUL  Queromorre.txt  animal.c  animal.h  chromossome.c  chromossome.h  config.c  config.h  environment.c  environment.h  main.c  population.c  population.h  tournament.c  tournament.h  util.c  util.h
